--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
   },
   "homepage": "https://github.com/ngocng1310/graphql-basics#readme",
   "dependencies": {
+    "casual": "^1.5.19",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
-    "nodemon": "^1.18.6"
+    "graphql-tools": "^4.0.3",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.14",
+    "nodemon": "^1.18.6",
+    "sequelize": "^4.41.2",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "express": "^4.16.4"
   }
 }
